unpackaged/main/default/objects/nbavs__UserPolicy__c/nbavs__UserPolicy__c.object-meta.xml
<CustomObject>
    <label>User Policy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>