unpackaged/main/default/objects/nbavs__UserPolicy__c/fields/nbavs__AttachVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AttachVoiceMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach VoiceMail Recordings</label>
    <type>Checkbox</type>
</CustomField>