unpackaged/main/default/objects/nbavs__UserPolicy__c/fields/nbavs__CopyInVoiceMailBox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CopyInVoiceMailBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save a Copy in VoiceMail box</label>
    <type>Checkbox</type>
</CustomField>