unpackaged/main/default/objects/nbavs__UserPolicy__c/fields/nbavs__Data__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Data__c</fullName>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>