unpackaged/main/default/objects/nbavs__UserPolicy__c/fields/nbavs__EmailNotifications__c.field-meta.xml
<CustomField>
    <fullName>nbavs__EmailNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notifications</label>
    <type>Checkbox</type>
</CustomField>