unpackaged/main/default/objects/nbavs__UserPolicy__c/fields/nbavs__Template__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Template__c</fullName>
    <label>Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RINGORDER</fullName>
                <default>true</default>
                <label>RINGORDER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>