unpackaged/main/default/objects/nbavs__UserPolicy__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CALL</fullName>
                <default>true</default>
                <label>CALL</label>
            </value>
            <value>
                <fullName>NONCALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>