unpackaged/main/default/objects/nbavs__UserPolicy__c/fields/nbavs__VoiceMail__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VoiceMail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>VoiceMail</label>
    <type>Checkbox</type>
</CustomField>